Fix overlapped tab title/icon rendering in Chrome

--- a/src/core/nav/nav-tabs.module.scss
+++ b/src/core/nav/nav-tabs.module.scss
@@ -63,6 +63,7 @@
   flex-direction: column;
   justify-content: center;
   cursor: pointer;
+  z-index: 0; // XXX: Chrome overlapped rendering
 }
 
 .title {
